# cmake-Qt5-example

./: CMakeLists.txt  README.md
app/: myApplication.cpp
src/interface/: MainWindow.cpp  MainWindow.hpp
